reator 받아와서 flask 시각화 완료

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    table { border-collapse: collapse;}
+    td {border: 1px black solid;}
+</style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>네이버 뉴스 수집</h2>
+
+    <div class="container m_box m_tm_20">
+        <table  class="table table-bordered" id="news-box">
+            <tr>
+                <th>신문사</th>
+                <th>제목</th>
+                <th>작성일</th>
+            </tr>
+        </table>
+    </div>
+
+    <script>
+        const eventSource = new EventSource("http://localhost:8080/news");
+        eventSource.onmessage = (event) => {
+            naverNews = JSON.parse(event.data);
+            $("#news-box").append("<tr><td>" + naverNews.company + "</td><td>" + naverNews.title + "</td><td>" + naverNews.createdAt + "</td></tr>");
+        }
+    </script>
 </body>
 </html>
